--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "preview": "vite preview"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Sayantan",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "react": "^18.2.0",
